--- a/IISAgent/App.config
+++ b/IISAgent/App.config
@@ -14,5 +14,5 @@
     <add key="ServiceDescription" value="Monitors statistics of web applications hosted on IIS server." />
   </appSettings>
 
-  <monitor timerInterval="10000" gatewayUrl="blabla" />
+  <monitor timerInterval="10000" gatewayUrl="http://localhost:56700" />
 </configuration>
