Fix path to the xml comments file when hosting on Azure

--- a/ApiGateway/ApiGateway.csproj
+++ b/ApiGateway/ApiGateway.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp1.1\ApiGateway.xml</DocumentationFile>
+    <DocumentationFile>wwwroot\doc\v1\ApiGateway.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.1.1" />
