Add backend to enable agent

--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnString": ""
+    "DefaultConnString": "Server=.\\SQLSERVER2014;Database=RMS-Dev;Trusted_Connection=True;"
   }
 }
